# python-command-wrapper

./: LICENSE  generate_wrapper.py  py_wrapper.py  setup.py
templates/: pyproject.toml  setup.py  wrapper.py
